Allow removing a palette entry